src/parser/parser.yxx
/* Filename: parser.yxx */

%{
	#include "cpp.h"
	#include "lexer.h"
	#include "parser.h"
	using namespace std;
	static Module* module = NULL;
%}

/* Set Parser Options */
%glr-parser    // using glr so we can allow some conflicts in ambiguous C++ grammar
%error-verbose // has bison output verbose errors
%locations     // enable location tracking; we use this to pair comments with tokens

//%define api.namespace {treesap}
%define api.prefix {cpp_yy}
%define api.token.prefix {TOKEN_} // prefix tokens with TOKEN_ to avoid name conflicts

/* Define our YYSTYPE */
%union {
	int integer;
	bool boolean;
	char character;
	double floating;
	std::string* string;
}

/* Lexing Symbols */
%token END 0 "end of file" // error messages refer to "end of file" intead of $end

/* Literal Tokens */
%token <integer>   INTEGER
%token <floating>  FLOAT
%token <string>    STRING
%token <character> CHAR
%token <boolean>   BOOLEAN

/* Semantic Tokens */
%token <string> IDENTIFIER

/* Keyword Tokens */
%token KW_NAMESPACE "namespace"

// Access specifiers
%token KW_PUBLIC    "public"
%token KW_PROTECTED "protected"
%token KW_PRIVATE   "private"

// Type-definitions
%token KW_ENUM    "enum"
%token KW_STRUCT  "struct"
%token KW_CLASS   "class"
%token KW_TYPEDEF "typedef"

// Fundamental-type keywords
%token KW_INT      "int"
%token KW_DOUBLE   "double"
%token KW_UNSIGNED "unsigned"
%token KW_LONG     "long"
%token KW_SHORT    "short"

/* Operator Tokens */
%token OP_CONS "::"

// We're naming this ops by their symbol, because they're overload
%token OP_AND  "&"
%token OP_STAR "*"


%%

cxx : empty
	| declarations
	| error ';'
	;

declarations
	: declaration
	| declarations declaration
	;

declaration
	: namespace_decl
	| method_decl ';'
	| class_decl ';'
	| struct_decl ';'
	| enum_decl ';'
	| variable_decl ';'
	;

statements
	:
	;

statement
	:
	;

class_body
	: class_part
	| class_body class_part
	;

class_part
	: declaration
	| access_specifier
	;

access_specifier
	: "public" ':'
	| "protected" ':'
	| "private" ':'
	;

enumeration
	: IDENTIFIER
	| enumeration ',' IDENTIFIER
	;

variable_decl
	: type_name variable_init
	| variable_decl ',' variable_init
	;

variable_init
	: variable_spec
	| variable_spec '=' statement
	;

enum_decl
	: "enum" IDENTIFIER '{' '}'
	| "enum" IDENTIFIER '{' enumeration '}'

class_decl
	: "class" IDENTIFIER         // declaration
	| "class" IDENTIFIER '{' '}' // definition
	| "class" IDENTIFIER '{' class_body '}'
	;

struct_decl
	: "struct" IDENTIFIER         // declaration
	| "struct" IDENTIFIER '{' '}' // definition
	| "struct" IDENTIFIER '{' class_body '}'
	;

namespace_decl
	: "namespace" '{' '}'
	| "namespace" '{' declarations '}'
	| "namespace" IDENTIFIER '{' '}'
	| "namespace" IDENTIFIER '{' declarations '}'
	;

method_decl
	: type_name variable_spec '(' ')' method_body
	| type_name variable_spec '(' method_params ')' method_body
	;

method_params
	: type_name
	| type_name variable_spec
	| method_params ',' type_name
	| method_params ',' type_name variable_spec
	;

method_body
	: empty
	| '{' statements '}'
	;

variable_spec
	: IDENTIFIER
	| "&" IDENTIFIER
	| "*" variable_spec
	;

type_name
	: integer_type
	| scoped_name
	;


// For this rule, we'll allow almost everything in the grammar, but manually
//     check to make sure the user isn't insane.
integer_type
	: "short"
	| "long"
	| "int"
	| "unsigned"
	| "short" integer_type
	| "long" integer_type
	| "int" integer_type
	| "unsigned" integer_type
	;

scoped_name
	: IDENTIFIER
	| scoped_name "::" IDENTIFIER
	;

/*
string_literal
	: STRING
	| string_literal STRING
	;
*/

empty
	:
	;

%%

/* ---- User Subroutines ---- */
Module* run_parser(const std::string & filename) {
	module = init_lexer(filename);
	if(!module) { return NULL; }
	if(yyparse() != 0 || cpp_yyerrors() > 0) { return NULL; }
	return module;
}
int parser_errors() { return cpp_yyerrors(); }
int parser_warnings() { return cpp_yywarnings(); }
